# PolSARSignatures

./: CMakeLists.txt  README.md
Scripts/: list_dir.py  plot_results.py  save_all_to_figures.py
Testing/: CMakeLists.txt
Testing/Lacunarity/: CMakeLists.txt  LacunarityTest.cxx
Testing/StokesOperator/: CMakeLists.txt  PolarSynthesisFromStokesMatrix.cxx  otbPolarimetricSynthesisStokesMatrixFilter.cxx  otbSinclairToStokesMatrixFunctor.cxx  otbSinclairToStokesMatrixImage.cxx
Utilities/: CMakeLists.txt
Utilities/ConvertPOIListToMaskImage/: CMakeLists.txt  ConvertPOIListToMaskImage.cxx
Utilities/SinclairToStokesMatrixImage/: CMakeLists.txt  SinclairToStokesMatrixImage.cxx  StokesMatrixImageMultilooking.cxx
include/: ezETAProgressBar.hpp  itkLocalMeanImageFunction.hxx  itkLocalSigmaImageFunction.hxx  itkLocalStatisticImageFunctionBase.hxx  itkLocalStatisticNeighborhoodBase.hxx  itkRegularNeighborhood.hxx  itkStochasticFractalImageFunction.hxx  otbMultiChannelsPolarimetricSynthesisStokesFilter.h  otbMultiChannelsPolarimetricSynthesisStokesFilter.txx  otbPolarimetricSynthesisStokesImageFunction.h  otbPolarimetricSynthesisStokesImageFunction.txx  otbPolarimetricSynthesisStokesMatrixFilter.h  otbPolarimetricSynthesisStokesMatrixFilter.txx  otbSinclairToStokesMatrixFunctor.h
src/: CMakeLists.txt  FractalPolarizationSignature.cxx  SignatureOfLacunarity.cxx  SignaturesCalculationHelper.cxx  SignaturesCalculationHelper.h  SignaturesGenerator.h
